Ensure text remains visible during webfont load
Đảm bảo văn bản vẫn hiển thị trong quá trình tải webfont
https://web.dev/font-display/?utm_source=lighthouse&utm_medium=unknown

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -8,11 +8,15 @@
 
 /* NUKEVIET ICONS */
 @font-face {
-    font-family:'NukeVietIcons';
-    src:url('../../default/fonts/NukeVietIcons.eot?avyewf');
-    src:url('../../default/fonts/NukeVietIcons.eot?#iefixavyewf') format('embedded-opentype'),url('../../default/fonts/NukeVietIcons.ttf?avyewf') format('truetype'),url('../../default/fonts/NukeVietIcons.woff?avyewf') format('woff'),url('../../default/fonts/NukeVietIcons.svg?avyewf#NukeVietIcons') format('svg');
-    font-weight:normal;
-    font-style:normal;
+  font-family: 'NukeVietIcons';
+  src:
+    url('../fonts/NukeVietIcons.woff2?q28kko') format('woff2'),
+    url('../fonts/NukeVietIcons.ttf?q28kko') format('truetype'),
+    url('../fonts/NukeVietIcons.woff?q28kko') format('woff'),
+    url('../fonts/NukeVietIcons.svg?q28kko#NukeVietIcons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 [class^="icon-"],
